--- a/app/globals.css
+++ b/app/globals.css
@@ -17,6 +17,10 @@
 }
 
 body {
+  overflow-x: hidden;
+}
+
+/* body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
@@ -24,7 +28,7 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
-}
+} */
 
 @layer utilities {
   .text-balance {
